# lightstatic

./: .eslintignore  .eslintrc.js  .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.githooks/: init.sh  pre-push
scripts/: esbuild.js
src/: args.rs  cache.ts  common.ts  config.rs  dir.tpl.html  helper.rs  helper.ts  index.ts  logger.rs  logger.ts  main.rs  pid.rs  server.js  server.rs  server.ts  server_core.rs  store.rs  util.js  util.rs  util.ts
