[package]
name = "lightstatic"
version = "1.0.0"
edition = "2021"
description = "lightweight static file server"
license = "MIT"
keywords = ["static", "server", "file-server"]
documentation = "https://github.com/jingeweb/lightstatic"

[[bin]]
name = "lightstatic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16", default-features=false, features=["h1-server"] }
http-types = { version = "2.12.0" }
clap = { version = "3.1.1", features = ["derive"] }
async-std = { version = "1.10.0", features=["attributes"] }
futures = { version = "0.3.21" }
ahash = { version = "0.7.6" }
regex = { version = "1.5.4" }
dirs = { version = "4.0" }
path-absolutize = { version = "3.0.11" }
colored = { version = "2.0.0" }
port-selector = { version = "0.1" }
local-ip-address = { version = "0.4" }
open = { version = "3.0" }
log = { version = "0.4" }
fern = { version = "0.6", features=["date-based"] }
chrono = { version = "0.4" }
signal-hook = { version = "0.3" }
signal-hook-async-std = { version = "0.2" }
async-compression = { version = "0.3", features=["gzip", "futures-io"] }
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
libc = { version = "0.2" }